samples/_failures_safe/1761665605_237fb7_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_607de19e.c: In function ‘main’:
./samples/SAFE/__tmp_607de19e.c:159:32: error: ‘Matrix’ has no member named ‘col’; did you mean ‘cols’?
  159 |             result.cols = mat1.col
      |                                ^~~
      |                                cols
./samples/SAFE/__tmp_607de19e.c:159:35: error: expected ‘;’ at end of input
  159 |             result.cols = mat1.col
      |                                   ^
      |                                   ;
./samples/SAFE/__tmp_607de19e.c:159:13: error: expected declaration or statement at end of input
  159 |             result.cols = mat1.col
      |             ^~~~~~
./samples/SAFE/__tmp_607de19e.c:159:13: error: expected declaration or statement at end of input
